Improved Chessboard - Fixed alignment issues of rows - Added CSS for pieces to be centered inside tiles - Added dummy piece element, will change to img later - Moved some functions into helpers - Added IDs for each tile

--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,9 +1,15 @@
+div.tile-row {
+    height: 100px;
+}
+
 div.tile {
     width: 100px;
     height: 100px;
     margin: 0;
     padding: 0px 0px;
     display: inline-block;
+    text-align:center;
+    position:relative;
 }
 
 div.tile.white-tile {
@@ -12,4 +18,12 @@ div.tile.white-tile {
 
 div.tile.black-tile {
     background-color: #1f1f1f;
+}
+
+p.piece {
+    position:absolute;
+    left:50%;
+    top:50%;
+    margin:auto;
+    transform: translate(-50%, -50%);
 }
